# qsv

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: db.rs  main.rs  qsv.rs
src/csv/: csv.rs  csv_data.rs  inference.rs  mod.rs
src/db/: functions.rs  mod.rs  utils.rs
src/parser/: collector.rs  mod.rs  rewriter.rs
src/qsv/: analysis.rs  mod.rs  query.rs  statistics.rs  util.rs
testdata/: all_floats.csv  mixed_floats.csv  occupations.csv  occupations_with_extraneous_spaces.csv  occupations_with_spaces_in_headers.csv  people.csv  slash_as_separator.csv  sortable_columns.csv  sql_injection.csv  statistical.csv  test.csv
tests/: integration.rs
