[package]
name = "qsv"
version = "0.1.0"
authors = ["Dermot Haughey <hderms@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
rusqlite = "0.25.1"
csv="1.1"
sqlparser = "0.9.0"
uuid={version = "0.8", features = ["v4"]}

[dev-dependencies]
assert_cmd="0.10"
predicates="1"
